[package]
name = "oxiterm"
edition = "2024"
version = "0.0.0"
authors = ["Ryan Smith <the.ryan.smith@gmail.com>"]
description = "A blazing-fast, memory-safe, cross-platform terminal emulator built from the ground up in Rust."
readme = "README.md"
repository = "https://github.com/oxiterm/oxiterm"
license = "MIT OR Apache-2.0"
keywords = ["terminal", "emulator", "cli", "cross-platform", "oxiterm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
